use autoclosable sessions